# particl

./: README.md
core/: particl.cpp  particl.h  vector2.cpp  vector2.h
desktop/: CMakeLists.txt  main.cpp  renderer.cpp  renderer.h
